--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "nodeit",
-  "version": "0.0.0",
+  "name": "parrot",
+  "version": "0.9.9",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
+  },
+  "engines": {
+    "node": "8.11.1"
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
